--- a/index.html
+++ b/index.html
@@ -4,7 +4,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thanks for submitting</title>
-  <link rel="stylesheet" href="../style.css">
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+body{
+  background: #a438cc;
+  font-family: 'Poppins', sans-serif;
+}
+
+.thanks_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  padding: 20px;
+  background: #fff;
+  box-shadow: 2px 2px 12px rgba(0,0,0,0.3);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+}
+
+.thanks_container h1{
+  font-size: 25px;
+  color: var(--black)
+}
+
+.thanks_container img{
+  width: 30%;
+  margin-top: 12px;
+}
+
+</style>
 </head>
 <body>
   <div class="thanks_container">
