--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@ body{
   margin-top: 12px;
 }
 
+@media only screen and (max-width: 450px) {
+  .thanks_container{
+    width: 250px;
+  }
+
+  .thanks_container h1{
+    font-size: 15px;
+    color: var(--black)
+  }
+
+  .thanks_container img{
+    width: 20%;
+  }
+}
 </style>
 </head>
 <body>
