--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@ body{
 
 .thanks_container img{
   width: 30%;
-  margin-top: 12px;
+  margin: 12px 0;
+}
+
+/* redirect counter  */
+.counter{
+  padding: 12px 0;
+  border-top: 1px solid rgb(90, 90, 90);
+  width: 100%;
+  text-align: center;
+  font-size: 19px;
 }
 
 @media only screen and (max-width: 450px) {
@@ -56,6 +65,37 @@ body{
   <div class="thanks_container">
     <h1>Submited, Review pending</h1>
     <img src="good.PNG">
+    <div class="counter"></div>
   </div>
+
+  <a href="https://goodluck-portfolio.herokuapp.com/" style="display: none;"></a>
+
+<script>
+let redirect = () => {
+  document.querySelector('a').click();
+};
+
+setTimeout(redirect, 7000)
+
+let counter = document.querySelector('.counter');
+let countValue = 6;
+let startCount;
+
+let startTimerLoop = () => {
+  let timer = () => {
+    countValue--;
+    counter.innerHTML = 'back to portfolio in: ' + countValue + ' sec';
+
+    if(countValue < 1) {
+      clearInterval(startCount);
+      counter.innerHTML = 'redirecting.....'
+    }
+  }
+
+  startCount = setInterval(timer, 1000);
+}
+
+startTimerLoop();
+</script>
 </body>
 </html>
